--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
   </div>
   <!-- javascript at the bottom for fast page loading -->
+  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery.easing-sooper.js"></script>
   <script type="text/javascript" src="js/jquery.sooperfish.js"></script>
