Home....jpg buka home...jpg

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <!-- begin content -->
     <div id="site_content">
       <ul class="slideshow">
-        <li class="show"><img width="950" height="450" src="images/home_1.jpg" alt="&quot;Selamat datang di Mitsubishi SBM Group Network.&quot;" /></li>
-        <li><img width="950" height="450" src="images/home_2.jpg" alt="&quot;Selamat datang di Mitsubishi SBM Group Network.&quot;" /></li>
-        <li><img width="950" height="450" src="images/home_3.jpg" alt="&quot;Selamat datang di Mitsubishi SBM Group Network.&quot;" /></li>
+        <li class="show"><img width="950" height="450" src="images/Home_1.jpg" alt="&quot;Selamat datang di Mitsubishi SBM Group Network.&quot;" /></li>
+        <li><img width="950" height="450" src="images/Home_2.jpg" alt="&quot;Selamat datang di Mitsubishi SBM Group Network.&quot;" /></li>
+        <li><img width="950" height="450" src="images/Home_3.jpg" alt="&quot;Selamat datang di Mitsubishi SBM Group Network.&quot;" /></li>
       </ul>
     </div>
     <!-- end content -->
